SEM integration part 1: launch two separate RAO computations